--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -516,7 +516,7 @@
    "source": [
     "def model_opt(d_loss, g_loss, learning_rate, beta1):\n",
     "    \"\"\"\n",
-    "    Get optimization operations\n",
+    "    Get optimization operations \n",
     "    :param d_loss: Discriminator loss Tensor\n",
     "    :param g_loss: Generator loss Tensor\n",
     "    :param learning_rate: Learning Rate Placeholder\n",
@@ -665,8 +665,7 @@
     "\n",
     "        saver.save(sess, './generator.ckpt')\n",
     "\n",
-    "    return losses\n",
-    "                "
+    "    return losses                "
    ]
   },
   {
